--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,10 @@
-<h1>Welcome to the HomePage!</h1>
+</html>
+<head>
+  <script src="jquery-2.1.4.min.js"></script>
+<title>Hello</title>
+</head>
+<body>
+
+<h1> Hello world. <h1>
+</body>
+</html>
