--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 
-<h1> Hello world. <h1>
+<h1> {{search}} <h1>
+
+<a href="{{ url_for('index') }}">Back home</a> 
+
+
 </body>
 </html>
