--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,13 @@
 </html>
 <head>
   <script src="jquery-2.1.4.min.js"></script>
-<title>Hello</title>
+<title>index</title>
 </head>
 <body>
 
 <h1> Hello world. <h1>
 
 <form action="{{ url_for('index') }}" method="POST">
-{{ form.hidden_tag() }}
 <input type="text", name="search", id="search", placeholder="search">
 <button type="submit">Search</button>
 </form>
