--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <h1> Hello world. <h1>
 
 <form action="{{ url_for('index') }}" method="POST">
+<input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 <input type="text", name="search", id="search", placeholder="search">
 <button type="submit">Search</button>
 </form>
