--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <form action="{{ url_for('index') }}" method="POST">
 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 <input type="text", name="search", id="search", placeholder="search">
-<button type="submit">Search</button>
+<button type="submit", id="submit">Search</button>
 </form>
 
 </body>
